--- a/style.css
+++ b/style.css
@@ -381,6 +381,7 @@ li.interesting:hover a:after,
   position: relative;
   padding-bottom: 56.25%;
   /* 16:9 */
+  margin-bottom: 1em;
   padding-top: 25px;
   height: 0; }
   .iframe-wrapper iframe {
@@ -402,10 +403,8 @@ li.interesting:hover a:after,
 .video-playing {
   position: absolute;
   top: 0px;
-  /* display: none; */
   width: 100%;
   left: 0;
-  /* right: 10px; */
   padding: 0 10px;
   box-sizing: border-box; }
 
